[package]
name = "kenlmrs"
version = "0.0.1"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
# edition = "2022"

[dependencies]
autocxx = "0.25.0"
cxx = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
numpy = "0.18.0"

[build-dependencies]
autocxx-build = "0.25.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
