[package]
name = "pykenlm"
version = "0.0.1"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]
# edition = "2022"

[lib]
name = "kenlmrs"
crate-type = ["cdylib"]
# # "cdylib" is necessary to produce a shared library for Python to import from.
# #
# # Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# # to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# # crate-type = ["cdylib", "rlib"]


[dependencies.kenlmrs]
path = "../kenlmrs"

[dependencies]
autocxx = "0.24.0"
cxx = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
numpy = "0.18.0"

[build-dependencies]
autocxx-build = "0.24.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
